[tool.mypy]
strict_optional = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts= """
    --cov UnleashClient \
    --cov-report term \
    --cov-report html:test_results/cov_html \
    --cov-report xml:test_results/cov.xml \
    --html=test_results/results.html \
    --self-contained-html \
    --junitxml=test_results/results.xml \
    --disable-warnings
"""
log_file_level="INFO"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "PL", "YTT", "I"]
ignore = ["E501", "PLR2004"]

fixable = ["I"]

[tool.ruff.pylint]
max-args = 25

[tool.isort]
profile = "black"

[tool.setuptools_scm]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=6.2"]