[tool.mypy]
strict_optional = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts= """
    --cov UnleashClient \
    --cov-report term \
    --cov-report html:test_results/cov_html \
    --cov-report xml:test_results/cov.xml \
    --html=test_results/results.html \
    --self-contained-html \
    --junitxml=test_results/results.xml \
    --disable-warnings
"""
log_file_level="INFO"

[tool.ruff]
select = [
    "E",   # pycodestyle, error
    "W",   # pycodestyle, warning
    "F",   # pyflakes
    "PL",  # pylint,
    "YTT", # flake8-2020
    "I"    # isort
]
ignore = ["E501", "PLR2004"]

fixable = ["I"]

[tool.ruff.pylint]
max-args = 25

[tool.isort]
profile = "black"

[tool.setuptools_scm]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=6.2"]
